--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,35 @@ ul{
     object-fit: cover;
 }
 
+#cases{
+    margin: 2rem 0rem;
+}
+
+#header-cases{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1.5rem;
+}
+
+.flex-row{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.flex-column{
+    display: flex;
+    flex-direction: column;
+    flex: 25%;
+}
+
+.flex-column img{
+    width: 100%;
+    height: 100%;   
+}
+
 .btn-transparant:hover{
     background-color: #333;
     color: #fff;
@@ -183,7 +212,18 @@ ul{
     color: #fff;
 }
 
+.flex-column img:hover{
+    opacity: 0.7;
+}
 
+.box-items img{
+    width: 100%;
+    border-radius: 50%;
+}
+
+.box-items img:hover{
+    opacity: 0.7;
+}
 
 @media (max-width:700px) and (min-width: 501px){
     #sideshow-content h1{
@@ -192,6 +232,14 @@ ul{
 
     .box, .row{
         display: block;
+    }
+
+    .flex-column{
+        flex: 100%;
+    }
+
+    .blog-pic{
+        display: none;
     }
 
 }
@@ -215,5 +263,13 @@ ul{
 
     .box, .row{
         display: block;
+    }
+
+    .flex-column{
+        flex: 100%;
+    }
+
+    .blog-pic{
+        display: none;
     }
 }
