--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,39 @@ ul{
     font-size: 3rem;
     text-shadow: 2px 5px 5px rgb(107, 101, 101);
 }
+
+.box-items img{
+    width: 100%;
+    border-radius: 50%;
+}
+
+#contact-us .column-2{
+    background-color: #f5f5f5;
+}
+
+#contact-us form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#contact-us input{
+    margin-top: 0;
+    border: 1px solid #fff;
+    padding: 0.5rem;
+    border-radius: 5px;
+    height: 30px;
+    outline: none;
+}
+
+#confirmation{
+    height: 30px;
+    cursor: pointer;
+    background-color: #FFC300;
+    border: 1px solid #333;
+    border-radius: 5px;
+}
+
 .btn-transparant:hover{
     background-color: #333;
     color: #fff;
@@ -225,10 +258,6 @@ ul{
     opacity: 0.7;
 }
 
-.box-items img{
-    width: 100%;
-    border-radius: 50%;
-}
 
 .box-items img:hover{
     opacity: 0.7;
