--- a/css/style.css
+++ b/css/style.css
@@ -236,12 +236,51 @@ ul{
     outline: none;
 }
 
+#contact-us input:focus{
+    box-shadow: 5px 5px 5px #aaaaaa;
+}
+
 #confirmation{
     height: 30px;
     cursor: pointer;
     background-color: #FFC300;
     border: 1px solid #333;
     border-radius: 5px;
+}
+
+footer{
+    background: #333;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+#social-media{
+    padding: 2rem 0;
+}
+
+#social-media i{
+    color: #f5f5f5;
+    padding: 0.5rem;
+}
+
+#social-media + p{
+    padding-bottom: 2.5rem;
+}
+
+#social-media i#facebook:hover{
+    color: #205477;
+}
+#social-media i#linkedin:hover{
+    color: #3eb2ff;
+}
+#social-media i#youtube:hover{
+    color: #7c0707;
+}
+#social-media i#twitter:hover{
+    color: #22b4a8;
 }
 
 .btn-transparant:hover{
